[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-organiser"
version = "0.0.0"
description = "Relearning FastAPI"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.49.0",
]

[tool.hatch.envs.default.scripts]
serve = "uvicorn --reload --reload-dir src/ task_organiser.main:app"

[tool.ruff]
line-length = 119

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
